--- a/face-api/docker-compose.yml
+++ b/face-api/docker-compose.yml
@@ -4,9 +4,6 @@ services:
 
   mongo:
     image: mongo
-    environment:
-      MONGO_INITDB_ROOT_USERNAME: root
-      MONGO_INITDB_ROOT_PASSWORD: example
     ports:
       - "27017:27017"  
     networks:
@@ -17,24 +14,22 @@ services:
     ports:
       - 8081:8081
     environment:
-      ME_CONFIG_MONGODB_ADMINUSERNAME: root
-      ME_CONFIG_MONGODB_ADMINPASSWORD: example
-      ME_CONFIG_MONGODB_URL: mongodb://root:example@mongo:27017/
+      ME_CONFIG_MONGODB_URL: mongodb://mongo:27017/
     depends_on:
       - "mongo"
     networks:
       - tcc  
 
-  face-api:
-    container_name: face-api
-    build: ./face-api
-    command: npm start
-    ports:
-      - 3000:3000  
-    volumes:
-      - ./face-api:/home/face-api  
-    networks:
-      - tcc    
+  # face-api:
+  #   container_name: face-api
+  #   build: ./face-api
+  #   command: npm start
+  #   ports:
+  #     - 3000:3000  
+  #   volumes:
+  #     - ./face-api:/home/face-api  
+  #   networks:
+  #     - tcc    
 
 networks:
     tcc:
